# RoboticaProyectoFinal

./: README.md
Laptop/ros2_ws/my_robot_description/: CMakeLists.txt  package.xml
Laptop/ros2_ws/my_robot_description/launch/: view_robot.py
Laptop/ros2_ws/my_robot_description/meshes/: BaseCastorWheel_link.STL  CastorWheel_link.STL  LeftWheel_link.STL  RightWheel_link.STL  base_link.STL
Laptop/ros2_ws/my_robot_description/urdf/: mi_robot.urdf
Laptop/ros2_ws/my_slam_launch/: setup.cfg  setup.py
Laptop/ros2_ws/my_slam_launch/launch/: slam_autonomous.launch.py  slam_with_kinect_launch.py
Laptop/ros2_ws/pico_odometry/: package.xml  setup.cfg  setup.py
Laptop/ros2_ws/pico_odometry/pico_odometry/: encoder_to_odom_node.py
Laptop/ros2_ws/wall_follower_slam/: package.xml  setup.cfg  setup.py
Laptop/ros2_ws/wall_follower_slam/wall_follower_slam/: wall_follower_node.py
Pi_Pico/: codigo_pico.cpp
RP_PI4/ros2_kinect_ws/kinect_ros2/: CMakeLists.txt
RP_PI4/ros2_kinect_ws/kinect_ros2/src/: minimal_kinect_node.cpp
RP_PI4/ros2_ws/my_slam_launch/: package.xml  setup.py
RP_PI4/ros2_ws/my_slam_launch/launch/: slam_with_kinect_launch.py
RP_PI4/ros2_ws/pi4_launch/: package.xml  setup.cfg  setup.py
RP_PI4/ros2_ws/pi4_launch/launch/: pi4_kinect_scan.launch.py  pi4_start.launch.py
